// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VaChip large chip 1`] = `
<span tabindex="0" class="va-chip va-chip--large" style="background: rgb(0, 0, 0); box-shadow: 0 0.125rem 0.19rem 0 rgba(0,0,0,0.4);"><!----> <span class="va-chip__content"></span>
<!----></span>
`;

exports[`VaChip small chip 1`] = `
<span tabindex="0" class="va-chip va-chip--small" style="background: rgb(0, 0, 0); box-shadow: 0 0.125rem 0.19rem 0 rgba(0,0,0,0.4);"><!----> <span class="va-chip__content"></span>
<!----></span>
`;
